Fix table overflow on small displays

--- a/src/app/loot-generator/loot-generator.component.css
+++ b/src/app/loot-generator/loot-generator.component.css
@@ -3,6 +3,7 @@
   padding: 1rem;
   max-width: auto;
   border-radius: 5px;
+  overflow: scroll;
 }
 
 .options {
